--- a/app/Resources/views/todolist/edit.html.twig
+++ b/app/Resources/views/todolist/edit.html.twig
@@ -3,19 +3,18 @@
 {% block body %}
     <h1>TodoList edit</h1>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('todolist_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div class="col-xs-12 clearfix">
+        {% form_theme edit_form 'bootstrap_3_layout.html.twig' %}
+        {{ form_start(edit_form) }}
+            {{ form_widget(edit_form) }}
+            <input type="submit" value="Edit" class="btn btn-default pull-right" />
+        {{ form_end(edit_form) }}
+        {{ form_start(delete_form) }}
+        <input type="submit" value="Delete" class="btn btn-default">
+        {{ form_end(delete_form) }}
+    </div>
+    
+    <div class="col-xs-12">
+        <a href="{{ path('todolist_index') }}" class="btn btn-default">Back to the list</a>
+    </div>
 {% endblock %}
