--- a/app/Resources/views/todolist/new.html.twig
+++ b/app/Resources/views/todolist/new.html.twig
@@ -5,12 +5,10 @@
     {% form_theme form 'bootstrap_3_layout.html.twig' %}
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Create" class="btn btn-default pull-right" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('todolist_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <div class="clearfix">
+        <a href="{{ path('todolist_index') }}" class="btn btn-default pull-right">Back to the list</a>
+    </div>
 {% endblock %}
